# abacus-develop

./: .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  Dockerfile.gnu  Dockerfile.intel  generate_build_info.sh
source/: CMakeLists.txt  Makefile.Objects  main.cpp
source/module_cell/: k_vector_utils.cpp  k_vector_utils.h  klist.cpp  klist.h
source/module_cell/test/: CMakeLists.txt  klist_test.cpp
source/module_elecstate/: CMakeLists.txt  elecstate.h  elecstate_energy.cpp  elecstate_energy_terms.cpp  elecstate_exx.cpp
source/module_elecstate/module_charge/: charge_init.cpp
source/module_elecstate/potentials/: e_exx_pw.cpp  e_exx_pw.h  potential_new.h
source/module_esolver/: CMakeLists.txt  esolver_ks.cpp  esolver_ks_pw.cpp  esolver_ks_pw.h
source/module_esolver/module_exx_helper/: exx_helper.cpp
source/module_hamilt_general/: operator.cpp  operator.h
source/module_hamilt_general/module_xc/: xc_functional.cpp
source/module_hamilt_lcao/module_tddft/: td_velocity.cpp
source/module_hamilt_pw/hamilt_pwdft/: CMakeLists.txt  global.cpp  global.h  hamilt_pw.cpp  hamilt_pw.h  stress_func_exx.cpp  stress_pw.cpp
source/module_hsolver/: diago_pexsi.cpp  diago_pexsi.h  hsolver_lcao.cpp  hsolver_pw.cpp
source/module_hsolver/module_pexsi/: dist_ccs_matrix.cpp  dist_ccs_matrix.h  dist_matrix_transformer.cpp  pexsi_solver.cpp  (+3 more)
source/module_io/: cal_pdos_gamma.h  input_conv.cpp  read_input_item_exx_dftu.cpp  td_current_io.cpp
source/module_parameter/: input_parameter.h
source/module_psi/: psi.cpp  psi.h  psi_initializer.h
source/module_ri/: Exx_LRI_interface.hpp  exx_lip.h
source/source_base/: CMakeLists.txt  complexmatrix.h  fs_compat.h  gather_math_lib_info.cpp  global_file.cpp  global_function.cpp  inverse_matrix.h  matrix.h  memory.cpp  memory.h  output.h  para_gemm.cpp  parallel_2d.cpp  parallel_2d.h  parallel_comm.cpp  parallel_comm.h  parallel_common.h  parallel_device.cpp  parallel_device.h  parallel_global.cpp  parallel_global.h  parallel_reduce.cpp  parallel_reduce.h  timer.cpp  timer.h  tool_quit.cpp  tool_quit.h  vector3.h  version.h
source/source_cell/: CMakeLists.txt  atom_pseudo.h  atom_spec.cpp  atom_spec.h  bcast_cell.cpp  k_vector_utils.cpp  k_vector_utils.h  klist.cpp  klist.h  magnetism.cpp  magnetism.h  pseudo.cpp  pseudo.h  qlist.cpp  qlist.h  read_atom_species.cpp  read_atoms.cpp  read_atoms_helper.cpp  sep.cpp  sep_cell.cpp  sep_cell.h  setup_nonlocal.h  unitcell.cpp  unitcell.h  unitcell_data.h  update_cell.cpp
source/source_esolver/: CMakeLists.txt  esolver.cpp  esolver.h  esolver_dfpt_pw.cpp  esolver_dfpt_pw.h  esolver_dm2rho.cpp  esolver_double_xc.cpp  esolver_dp.cpp  esolver_fp.cpp  esolver_fp.h  esolver_gets.cpp  esolver_ks.cpp  esolver_ks.h  esolver_ks_lcao.cpp  esolver_ks_lcao.h  esolver_ks_lcao_tddft.cpp  esolver_ks_lcao_tddft.h  esolver_ks_lcaopw.cpp  esolver_ks_pw.cpp  esolver_ks_pw.h  esolver_lj.cpp  esolver_lj.h  esolver_nep.cpp  esolver_of.cpp  esolver_of_interface.cpp  esolver_of_tddft.cpp  lcao_others.cpp  pw_others.cpp
source/source_estate/: CMakeLists.txt  cal_wfc.cpp  elecstate.cpp  elecstate.h  elecstate_energy.cpp  elecstate_energy_terms.cpp  elecstate_exx.cpp  elecstate_lcao.h  elecstate_print.cpp  elecstate_pw.cpp  elecstate_pw.h  elecstate_pw_cal_tau.cpp  elecstate_tools.cpp  fp_energy.cpp  fp_energy.h  init_scf.cpp  makov_payne.cpp  makov_payne.h  occupy.h  read_pseudo.cpp  read_pseudo.h  setup_estate_pw.cpp  setup_estate_pw.h
source/source_hamilt/: operator.cpp  operator.h
source/source_hsolver/: CMakeLists.txt  diag_hs_para.cpp  diago_bpcg.cpp  diago_bpcg.h  diago_cusolver.cpp  diago_dav_subspace.cpp  diago_dav_subspace.h  diago_david.cpp  diago_elpa.cpp  diago_elpa_native.cpp  diago_iter_assist.cpp  diago_iter_assist.h  diago_lapack.cpp  diago_pexsi.cpp  diago_pexsi.h  diago_pxxxgvx.cpp  diago_scalapack.cpp  hsolver.cpp  hsolver.h  hsolver_lcao.cpp  hsolver_lcaopw.cpp  hsolver_lcaopw.h  hsolver_pw.cpp  hsolver_pw_sdft.cpp  para_linear_transform.cpp  para_linear_transform.h
source/source_io/: CMakeLists.txt  input_conv.cpp  parse_args.cpp
source/source_lcao/: FORCE.h  FORCE_STRESS.cpp  FORCE_STRESS.h  FORCE_gamma.cpp  FORCE_k.cpp  LCAO_domain.h  LCAO_init_basis.cpp  LCAO_nl_mu.cpp  LCAO_set.h  LCAO_set_st.cpp  dftu_lcao.cpp  hamilt_lcao.cpp  hamilt_lcao.h  pulay_fs.h  pulay_fs_temp.hpp  record_adj.cpp  setup_deepks.cpp  setup_exx.cpp  setup_exx.h  spar_dh.cpp  spar_dh.h  spar_exx.cpp  spar_exx.h  spar_hsr.cpp  spar_hsr.h  spar_u.h  wavefunc_in_pw.cpp  wavefunc_in_pw.h
source/source_main/: driver.cpp  driver.h  driver_run.cpp  main.cpp  version.h
source/source_md/: fire.cpp  md_func.cpp  md_func.h  verlet.cpp  verlet.h
source/source_psi/: psi_init_atomic.cpp  psi_init_atomic_random.h  psi_init_nao.h  psi_init_nao_random.h  psi_initializer.cpp  psi_initializer.h  psi_prepare.cpp
source/source_pw/: CMakeLists.txt
source/source_relax/: CMakeLists.txt  bfgs.cpp  bfgs.h  bfgs_basic.cpp  bfgs_basic.h  cg_base.cpp  cg_base.h  ions_move_basic.cpp  ions_move_basic.h  ions_move_bfgs.cpp  ions_move_bfgs.h  ions_move_bfgs2.cpp  ions_move_bfgs2.h  ions_move_cg.cpp  ions_move_cg.h  ions_move_lbfgs.cpp  ions_move_lbfgs.h  ions_move_methods.cpp  ions_move_methods.h  ions_move_sd.cpp  ions_move_sd.h  lattice_change_basic.cpp  lattice_change_basic.h  lattice_change_cg.cpp  lattice_change_cg.h  lattice_change_methods.cpp  lattice_change_methods.h  lbfgs.cpp  lbfgs.h  line_search.cpp  line_search.h  relax_data.cpp  relax_data.h  relax_driver.cpp  relax_driver.h  relax_nsync.cpp  relax_nsync.h  relax_sync.cpp  relax_sync.h
tests/: CMakeLists.txt
tests/01_PW/: CASES_CPU.txt
tests/02_NAO_Gamma/: CASES_CPU.txt
tests/03_NAO_multik/: CASES_CNPY.txt  CASES_CPU.txt  CMakeLists.txt
tests/05_rtTDDFT/: README
tests/07_OFDFT/: CASES_GPU.txt
tests/09_DeePKS/: CASES_CPU.txt  CMakeLists.txt
tests/11_PW_GPU/: CMakeLists.txt
tests/17_DS_DFTU/: CASES_CPU.txt  CMakeLists.txt  README.md  run_scf_nscf.sh
tests/integrate/: Autotest.sh  CASES  CASES_CPU.txt  README.md
(+1244 files in other folders)
